force-app/main/default/objects/Contact/fields/Customer_Use_Case__c.field-meta.xml
<CustomField>
    <fullName>Customer_Use_Case__c</fullName>
    <description>Used by Inside Sales to document the customer&apos;s use case.</description>
    <inlineHelpText>Populate the customer&apos;s use case for a possible relationship with Circle.</inlineHelpText>
    <label>Customer Use Case</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Access To Crypto Capital Markets</fullName>
            </value>
            <value>
                <fullName>Cross-Border Payments</fullName>
            </value>
            <value>
                <fullName>Defi</fullName>
            </value>
            <value>
                <fullName>Dollarization</fullName>
            </value>
            <value>
                <fullName>On-ramp</fullName>
            </value>
            <value>
                <fullName>Remittance</fullName>
            </value>
            <value>
                <fullName>Tokenization</fullName>
            </value>
            <value>
                <fullName>Wallets</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>