force-app/main/default/objects/Contact/fields/Cvent_OptedOut__c.field-meta.xml
<CustomField>
    <fullName>Cvent_OptedOut__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cvent OptedOut</label>
    <type>Checkbox</type>
</CustomField>