force-app/main/default/objects/Contact/fields/cybavo_lead__c.field-meta.xml
<CustomField>
    <fullName>cybavo_lead__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is this Contact a Cybavo Lead?</label>
    <type>Checkbox</type>
</CustomField>