force-app/main/default/objects/Contact/fields/Data_Deleted_Customer_Request__c.field-meta.xml
<CustomField>
    <fullName>Data_Deleted_Customer_Request__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Data Deleted / Customer Request</label>
    <type>Checkbox</type>
</CustomField>