force-app/main/default/objects/Contact/fields/Date_of_Alliance_Prog_PDR_Qualification__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Alliance_Prog_PDR_Qualification__c</fullName>
    <description>Date of Alliance Program PDR Qualification</description>
    <label>Date of Alliance Prog PDR Qualification</label>
    <type>Date</type>
</CustomField>