force-app/main/default/objects/Contact/fields/Date_of_Alliance_Program_Rejection__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Alliance_Program_Rejection__c</fullName>
    <label>Date of Alliance Program Rejection</label>
    <type>Date</type>
</CustomField>