force-app/main/default/objects/Contact/fields/Date_of_API_Form_Submission__c.field-meta.xml
<CustomField>
    <fullName>Date_of_API_Form_Submission__c</fullName>
    <label>Date of API Form Submission</label>
    <type>Date</type>
</CustomField>