force-app/main/default/objects/Contact/fields/Date_of_Authorized_Representative__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Authorized_Representative__c</fullName>
    <label>Date of Authorized Representative</label>
    <type>Date</type>
</CustomField>