force-app/main/default/objects/Contact/fields/Date_of_CA_form_2_submission__c.field-meta.xml
<CustomField>
    <fullName>Date_of_CA_form_2_submission__c</fullName>
    <label>Date of CA form 2 submission</label>
    <type>Date</type>
</CustomField>