force-app/main/default/objects/Contact/fields/Date_of_Circle_Account_Form1b_Submission__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Circle_Account_Form1b_Submission__c</fullName>
    <label>Date of Circle Account Form1b Submission</label>
    <type>Date</type>
</CustomField>