force-app/main/default/objects/Contact/fields/Date_of_Circle_Account_Form_1b_Submissio__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Circle_Account_Form_1b_Submissio__c</fullName>
    <label>Date of Circle Mint Form1b Submission</label>
    <type>Date</type>
</CustomField>