force-app/main/default/objects/Contact/fields/Date_Of_Dev_Account_Bus_Form_3_Sub__c.field-meta.xml
<CustomField>
    <fullName>Date_Of_Dev_Account_Bus_Form_3_Sub__c</fullName>
    <label>Date Of Dev Account Bus Form 3 Sub</label>
    <type>Date</type>
</CustomField>