force-app/main/default/objects/Contact/fields/Date_Of_Dev_Account_Sign_Up_Form_Sub__c.field-meta.xml
<CustomField>
    <fullName>Date_Of_Dev_Account_Sign_Up_Form_Sub__c</fullName>
    <label>Date Of Dev Account Sign Up Form Sub</label>
    <type>Date</type>
</CustomField>