force-app/main/default/objects/Contact/fields/Date_of_Inside_Sales_Handoff__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Inside_Sales_Handoff__c</fullName>
    <description>To sync into Salesloft for Inside Sales team</description>
    <label>Date of Inside Sales Handoff</label>
    <type>Date</type>
</CustomField>