force-app/main/default/objects/Contact/fields/Date_of_last_event_attended__c.field-meta.xml
<CustomField>
    <fullName>Date_of_last_event_attended__c</fullName>
    <label>Date of last event attended</label>
    <type>Date</type>
</CustomField>