force-app/main/default/objects/Contact/fields/Default__c.field-meta.xml
<CustomField>
    <fullName>Default__c</fullName>
    <label>Product Interest Handoff</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Treasury Handoff</fullName>
            </value>
            <value>
                <fullName>Platform Handoff</fullName>
            </value>
            <value>
                <fullName>Business Development Handoff</fullName>
            </value>
            <value>
                <fullName>Default</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>