force-app/main/default/objects/Contact/fields/Department_Cognism__c.field-meta.xml
<CustomField>
    <fullName>Department_Cognism__c</fullName>
    <label>Department (Cognism)</label>
    <length>155</length>
    <type>Text</type>
</CustomField>