force-app/main/default/objects/Contact/fields/Describe_Business_Revenue_Model__c.field-meta.xml
<CustomField>
    <fullName>Describe_Business_Revenue_Model__c</fullName>
    <description>Can the customer describe their Business/Revenue model?</description>
    <inlineHelpText>Can the customer describe their Business/Revenue model?</inlineHelpText>
    <label>Describe Business/Revenue Model</label>
    <length>255</length>
    <type>Text</type>
</CustomField>