force-app/main/default/objects/Contact/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>Description</label>
    <length>3200</length>
    <type>LongTextArea</type>
</CustomField>