force-app/main/default/objects/Contact/fields/Dev_Account_Authorized_User__c.field-meta.xml
<CustomField>
    <fullName>Dev_Account_Authorized_User__c</fullName>
    <label>Dev Account Authorized User</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>true</fullName>
            </value>
            <value>
                <fullName>false</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>