force-app/main/default/objects/Contact/fields/Developer_Account_Email_Verified__c.field-meta.xml
<CustomField>
    <fullName>Developer_Account_Email_Verified__c</fullName>
    <label>Developer Account Email Verified?</label>
    <length>20</length>
    <type>Text</type>
</CustomField>