force-app/main/default/objects/Contact/fields/Diqualification__c.field-meta.xml
<CustomField>
    <fullName>Diqualification__c</fullName>
    <description>Used by the Inside Sales team during their discovery calls</description>
    <inlineHelpText>Populate the reason for disqualifying the customer for an L3 Circle Account.</inlineHelpText>
    <label>Disqualification Criteria</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cannot confirm the legitimacy of business</fullName>
            </value>
            <value>
                <fullName>Not actively or intending to build with Circle products</fullName>
            </value>
            <value>
                <fullName>Not actively or intending to build on a blockchain we support</fullName>
            </value>
            <value>
                <fullName>Not a fit for Circle Alliance Program</fullName>
            </value>
            <value>
                <fullName>Flagged by sanctions/compliance</fullName>
            </value>
            <value>
                <fullName>The proposed minting volume is under 100K threshold</fullName>
                <isActive>false</isActive>
                <label>The proposed minting volume is under 100K threshold</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>