force-app/main/default/objects/Contact/fields/Don_t_Send_CC_Survey__c.field-meta.xml
<CustomField>
    <fullName>Don_t_Send_CC_Survey__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is used for a flow and when checked it means the customer is not eligible to receive a survey. This is not on the page layout.</description>
    <label>Don’t Send CC Survey</label>
    <type>Checkbox</type>
</CustomField>