force-app/main/default/objects/Contact/fields/Don_t_Send_CC_Survey_Date__c.field-meta.xml
<CustomField>
    <fullName>Don_t_Send_CC_Survey_Date__c</fullName>
    <description>This holds the date/time when the checkbox Don’t Send CC Survey is checked.  It is then used to uncheck this 7 days later in a scheduled flow.  This does not live on the page layout.</description>
    <label>Don’t Send CC Survey Date</label>
    <type>DateTime</type>
</CustomField>