force-app/main/default/objects/Contact/fields/Email_Cognism__c.field-meta.xml
<CustomField>
    <fullName>Email_Cognism__c</fullName>
    <label>Email (Cognism)</label>
    <length>155</length>
    <type>Text</type>
</CustomField>