force-app/main/default/objects/Contact/fields/Entity_Type_PQ__c.field-meta.xml
<CustomField>
    <fullName>Entity_Type_PQ__c</fullName>
    <label>Entity Type PQ</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Entity_Type_PQ</valueSetName>
    </valueSet>
</CustomField>