force-app/main/default/objects/Contact/fields/EU_Resident__c.field-meta.xml
<CustomField>
    <fullName>EU_Resident__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used in Salesloft for GDPR Compliance</description>
    <label>EU Resident</label>
    <type>Checkbox</type>
</CustomField>