force-app/main/default/objects/Contact/fields/Event_Registered__c.field-meta.xml
<CustomField>
    <fullName>Event_Registered__c</fullName>
    <label>Event Registered</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>UK Cocktail MM Recording | 2021-09</fullName>
            </value>
            <value>
                <fullName>DC Cocktail MM Recording | 2021-11</fullName>
            </value>
            <value>
                <fullName>UK London Event Building Crypto | 2022-03-17</fullName>
            </value>
            <value>
                <fullName>UK London Event ITP Dinner | 2022-03</fullName>
            </value>
            <value>
                <fullName>UK London Event Yield Breakfast | 2022-03</fullName>
            </value>
            <value>
                <fullName>Avalanche Webinar Blockchain | 2022-02</fullName>
            </value>
            <value>
                <fullName>BTC Miami | 2022-04</fullName>
            </value>
            <value>
                <fullName>BTC Miami | Worldpay Launch Party | 2022-04</fullName>
            </value>
            <value>
                <fullName>BTC Miami | Carbone BNYM Dinner | 2022-04</fullName>
            </value>
            <value>
                <fullName>DeFi Webinar with Solana and Orca | 2022-04</fullName>
            </value>
            <value>
                <fullName>Circle Account Webinar | 2022-04</fullName>
            </value>
            <value>
                <fullName>Circle Converge | 2022-09 | Waitlist</fullName>
            </value>
            <value>
                <fullName>FTX SALT Bahamas VIP Dinner | 2022-04 Registration</fullName>
            </value>
            <value>
                <fullName>Davos FTX Cocktail Hour | 2022-05-25</fullName>
            </value>
            <value>
                <fullName>Davos Women in Blockchain Event | 2022-05</fullName>
            </value>
            <value>
                <fullName>Blockworks Webinar - Institutional Crypto USDC | 2022-04</fullName>
            </value>
            <value>
                <fullName>Permissionless Happy Hour | 2022-05 Registration</fullName>
            </value>
            <value>
                <fullName>Event Register | Consensus Dinner FTX 3 Forks | 2022-05 Registration</fullName>
            </value>
            <value>
                <fullName>Circle Converge | 2022-09 | Registration</fullName>
            </value>
            <value>
                <fullName>NYC NFT Happy Hour | 2022-06</fullName>
            </value>
            <value>
                <fullName>Event | Yield Webinar 2022-06</fullName>
            </value>
            <value>
                <fullName>Singapore Cocktail Reception - Lantern | 2022-07</fullName>
            </value>
            <value>
                <fullName>Event Register | Consensus - Wintermute HH | 2022-06</fullName>
            </value>
            <value>
                <fullName>Singapore Executive Breakfast | 2022-07</fullName>
            </value>
            <value>
                <fullName>Singapore Private Circle Dinner | 2022-07</fullName>
            </value>
            <value>
                <fullName>Paris Fireside Chat | 2022-07</fullName>
            </value>
            <value>
                <fullName>Token 2049 - VIP Dinner | 2022-09</fullName>
            </value>
            <value>
                <fullName>Money 20/20 - VIP Dinner | 2022-10</fullName>
            </value>
            <value>
                <fullName>Singapore Fintech Festival - VIP Networking Drinks | 2022-11</fullName>
            </value>
            <value>
                <fullName>Singapore Fintech Festival - Networking Drinks | 2022-11</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>