force-app/main/default/objects/Contact/fields/Facebook_click_id__c.field-meta.xml
<CustomField>
    <fullName>Facebook_click_id__c</fullName>
    <label>Facebook Click Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>