force-app/main/default/objects/Contact/fields/First_Circle_Account_sign_in__c.field-meta.xml
<CustomField>
    <fullName>First_Circle_Account_sign_in__c</fullName>
    <label>First Circle Account sign in</label>
    <type>Date</type>
</CustomField>