force-app/main/default/objects/Contact/fields/First_Name_Cognism__c.field-meta.xml
<CustomField>
    <fullName>First_Name_Cognism__c</fullName>
    <label>First Name (Cognism)</label>
    <length>155</length>
    <type>Text</type>
</CustomField>