force-app/main/default/objects/Contact/fields/Full_Name_Cognism__c.field-meta.xml
<CustomField>
    <fullName>Full_Name_Cognism__c</fullName>
    <label>Full Name (Cognism)</label>
    <length>155</length>
    <type>Text</type>
</CustomField>