force-app/main/default/objects/Contact/fields/Google_ad_click_id__c.field-meta.xml
<CustomField>
    <fullName>Google_ad_click_id__c</fullName>
    <label>Google Ad Click Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>