force-app/main/default/objects/Contact/fields/Government_Initiatives__c.field-meta.xml
<CustomField>
    <fullName>Government_Initiatives__c</fullName>
    <label>Government Initiatives</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>