force-app/main/default/objects/Contact/fields/Govt_Initiatives_Notes__c.field-meta.xml
<CustomField>
    <fullName>Govt_Initiatives_Notes__c</fullName>
    <description>Required if Government Initiatives drop down = yes</description>
    <inlineHelpText>Provide additional context regarding this member&apos;s government initiatives.</inlineHelpText>
    <label>Govt Initiatives Notes</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>