force-app/main/default/objects/Contact/fields/How_are_they_custodying_their_assets__c.field-meta.xml
<CustomField>
    <fullName>How_are_they_custodying_their_assets__c</fullName>
    <description>Cybavo discovery questions</description>
    <label>How do they custody their assets?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>