force-app/main/default/objects/Contact/fields/How_do_you_want_to_use_Circle__c.field-meta.xml
<CustomField>
    <fullName>How_do_you_want_to_use_Circle__c</fullName>
    <label>How do you want to use Circle?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Business Account</fullName>
            </value>
            <value>
                <fullName>Developer Account</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>