force-app/main/default/objects/Contact/fields/HQ_Phone_Cognism__c.field-meta.xml
<CustomField>
    <fullName>HQ_Phone_Cognism__c</fullName>
    <label>HQ Phone (Cognism)</label>
    <length>155</length>
    <type>Text</type>
</CustomField>