force-app/main/default/objects/Contact/fields/Hubpsot_Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>Hubpsot_Contact_ID__c</fullName>
    <externalId>true</externalId>
    <label>Hubspot Contact ID</label>
    <length>25</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>