force-app/main/default/objects/Contact/fields/Hubspot_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Hubspot_Account_ID__c</fullName>
    <label>HubSpot Account ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>