force-app/main/default/objects/Contact/fields/Intended_Yield_Deal_Amount__c.field-meta.xml
<CustomField>
    <fullName>Intended_Yield_Deal_Amount__c</fullName>
    <description>What is the intended size of their investment? (Yield minimum: $100,000)</description>
    <inlineHelpText>What is the intended size of their investment? (Yield minimum: $100,000)</inlineHelpText>
    <label>Intended Yield Deal Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>