force-app/main/default/objects/Contact/fields/Intended_Yield_Deal_Amount_data__c.field-meta.xml
<CustomField>
    <fullName>Intended_Yield_Deal_Amount_data__c</fullName>
    <label>Intended Yield Deal Amount(data)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>&lt;$500k</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>