force-app/main/default/objects/Contact/fields/Interaction_Tags_Cognism__c.field-meta.xml
<CustomField>
    <fullName>Interaction_Tags_Cognism__c</fullName>
    <label>Interaction Tags (Cognism)</label>
    <length>155</length>
    <type>Text</type>
</CustomField>