force-app/main/default/objects/Contact/fields/Is_the_a_work_email__c.field-meta.xml
<CustomField>
    <fullName>Is_the_a_work_email__c</fullName>
    <label>Is this a work email?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>