force-app/main/default/objects/Contact/fields/Is_this_Contact_a_Verite_Lead__c.field-meta.xml
<CustomField>
    <fullName>Is_this_Contact_a_Verite_Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check yes or no if Contact is a Verite lead.</description>
    <label>Is this Contact a Verite Lead?</label>
    <type>Checkbox</type>
</CustomField>