force-app/main/default/objects/Contact/fields/Job_function__c.field-meta.xml
<CustomField>
    <fullName>Job_function__c</fullName>
    <label>Job function</label>
    <length>255</length>
    <type>Text</type>
</CustomField>