force-app/main/default/objects/Contact/fields/Job_Title_Cognism__c.field-meta.xml
<CustomField>
    <fullName>Job_Title_Cognism__c</fullName>
    <label>Job Title (Cognism)</label>
    <length>155</length>
    <type>Text</type>
</CustomField>