force-app/main/default/objects/Contact/fields/Last_Cadence_Email_Reply_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Cadence_Email_Reply_Date__c</fullName>
    <description>the last day the contact replied to a Salesloft cadence email</description>
    <inlineHelpText>the last day the contact replied to a Salesloft cadence email</inlineHelpText>
    <label>Last Cadence Email Reply Date</label>
    <type>Date</type>
</CustomField>