force-app/main/default/objects/Contact/fields/Last_Cadence_Email_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Cadence_Email_Sent_Date__c</fullName>
    <label>Last Cadence Email Sent Date</label>
    <type>Date</type>
</CustomField>