force-app/main/default/objects/Contact/fields/Last_Contacted__c.field-meta.xml
<CustomField>
    <fullName>Last_Contacted__c</fullName>
    <label>Last Contacted</label>
    <type>Date</type>
</CustomField>