force-app/main/default/objects/Contact/fields/Last_Date_of_Deal_Created_Lifecycle_Stag__c.field-meta.xml
<CustomField>
    <fullName>Last_Date_of_Deal_Created_Lifecycle_Stag__c</fullName>
    <label>Last Date of Deal Created Lifecycle Stag</label>
    <type>Date</type>
</CustomField>