force-app/main/default/objects/Contact/fields/Last_Date_of_SQL_Lifecycle_Stage__c.field-meta.xml
<CustomField>
    <fullName>Last_Date_of_SQL_Lifecycle_Stage__c</fullName>
    <label>Last Date of SQL Lifecycle Stage</label>
    <type>Date</type>
</CustomField>