force-app/main/default/objects/Contact/fields/Last_Distro_Route_CP__c.field-meta.xml
<CustomField>
    <fullName>Last_Distro_Route_CP__c</fullName>
    <description>Stamps the date/time of the most recent Distro Router via Chili Piper.</description>
    <label>Last Distro Route Date/Time</label>
    <type>DateTime</type>
</CustomField>