force-app/main/default/objects/Contact/fields/Last_Email_Replied_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Email_Replied_Date__c</fullName>
    <label>Last Email Replied Date</label>
    <type>Date</type>
</CustomField>