force-app/main/default/objects/Contact/fields/Last_Name_Cognism__c.field-meta.xml
<CustomField>
    <fullName>Last_Name_Cognism__c</fullName>
    <label>Last Name (Cognism)</label>
    <length>155</length>
    <type>Text</type>
</CustomField>