force-app/main/default/objects/Contact/fields/Last_page_seen__c.field-meta.xml
<CustomField>
    <fullName>Last_page_seen__c</fullName>
    <label>Last page seen</label>
    <type>Url</type>
</CustomField>