force-app/main/default/objects/Contact/fields/Last_sequence_enrolled__c.field-meta.xml
<CustomField>
    <fullName>Last_sequence_enrolled__c</fullName>
    <label>Last sequence enrolled</label>
    <type>Date</type>
</CustomField>