force-app/main/default/objects/Contact/fields/Last_sequence_enrolled_date__c.field-meta.xml
<CustomField>
    <fullName>Last_sequence_enrolled_date__c</fullName>
    <label>Last sequence enrolled date</label>
    <type>Date</type>
</CustomField>