force-app/main/default/objects/Contact/fields/Last_Updated_Date_Cognism__c.field-meta.xml
<CustomField>
    <fullName>Last_Updated_Date_Cognism__c</fullName>
    <label>Last Updated Date (Cognism)</label>
    <length>155</length>
    <type>Text</type>
</CustomField>