force-app/main/default/objects/Contact/fields/Latest_Date_of_API_Form_Submission__c.field-meta.xml
<CustomField>
    <fullName>Latest_Date_of_API_Form_Submission__c</fullName>
    <label>Latest Date of API Form Submission</label>
    <type>Date</type>
</CustomField>