force-app/main/default/objects/Contact/fields/Latest_Source_Drill_Down_2__c.field-meta.xml
<CustomField>
    <fullName>Latest_Source_Drill_Down_2__c</fullName>
    <label>Latest Source Drill-Down 2</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>